Stuff from David

--- a/03-events-forms/votes-demo/src/app/app.component.html
+++ b/03-events-forms/votes-demo/src/app/app.component.html
@@ -16,3 +16,9 @@
     <div class="bar" [ngStyle]="{ backgroundColor: candidate.color, width: candidate.votes * 20 + 'px' }"></div>
   </div>
 </section>
+<section>
+  <h2>Vote</h2>
+  <p>
+    <button *ngFor="let candidate of candidates">Vote for {{ candidate.name }}</button>
+  </p>
+</section>
