--- a/03-events-forms/votes-demo/src/app/app.component.html
+++ b/03-events-forms/votes-demo/src/app/app.component.html
@@ -19,6 +19,30 @@
 <section>
   <h2>Vote</h2>
   <p>
-    <button *ngFor="let candidate of candidates">Vote for {{ candidate.name }}</button>
+    <button *ngFor="let candidate of candidates" (click)="addVote(candidate)">Vote for {{ candidate.name }}</button>
   </p>
+</section>
+<section>
+  <h2>Add a Candidate</h2>
+  <form>
+    <p>
+      <label for="name" class="input-label">Name:</label>
+      <input type="text" id="name" name="name" />
+    </p>
+    <p>
+      <label class="input-label">Color:</label>
+      <label>
+        <input type="radio" name="color" value="green" /> Green
+      </label>
+      <label>
+        <input type="radio" name="color" value="BlanchedAlmond" /> Almond
+      </label>
+      <label>
+        <input type="radio" name="color" value="purple" /> Purple
+      </label>
+    </p>
+    <p>
+      <button type="submit">Add</button>
+    </p>
+  </form>
 </section>
