--- a/03-events-forms/votes-demo/src/app/app.component.html
+++ b/03-events-forms/votes-demo/src/app/app.component.html
@@ -16,29 +16,31 @@
     <div class="bar" [ngStyle]="{ backgroundColor: candidate.color, width: candidate.votes * 20 + 'px' }"></div>
   </div>
 </section>
+
 <section>
   <h2>Vote</h2>
   <p>
     <button *ngFor="let candidate of candidates" (click)="addVote(candidate)">Vote for {{ candidate.name }}</button>
   </p>
 </section>
+
 <section>
   <h2>Add a Candidate</h2>
-  <form>
+  <form (ngSubmit)="addCandidate()">
     <p>
       <label for="name" class="input-label">Name:</label>
-      <input type="text" id="name" name="name" />
+      <input type="text" id="name" name="name" [(ngModel)]="formCandidate.name" />
     </p>
     <p>
       <label class="input-label">Color:</label>
       <label>
-        <input type="radio" name="color" value="green" /> Green
+        <input type="radio" name="color" value="green" [(ngModel)]="formCandidate.color" /> Green
       </label>
       <label>
-        <input type="radio" name="color" value="BlanchedAlmond" /> Almond
+        <input type="radio" name="color" value="BlanchedAlmond" [(ngModel)]="formCandidate.color" /> Almond
       </label>
       <label>
-        <input type="radio" name="color" value="purple" /> Purple
+        <input type="radio" name="color" value="purple" [(ngModel)]="formCandidate.color" /> Purple
       </label>
     </p>
     <p>
