--- a/04-components/compdemo/src/app/all-people/all-people.component.html
+++ b/04-components/compdemo/src/app/all-people/all-people.component.html
@@ -1,10 +1,9 @@
 <div class="all-people">
   <h2>All the People</h2>
 
-  <app-person-detail *ngFor="let person of people; index as i" [fullName]="person" (personDelete)="deletePerson(i)"></app-person-detail>
+  <app-person-detail *ngFor="let person of people; index as i"
+    [fullName]="person" (personDelete)="deletePerson(i)"></app-person-detail>
 
   <h3>Add New Person</h3>
-  First Name: <input type="text" [(ngModel)]="newPerson.firstName" /><br />
-  Last Name: <input type="text" [(ngModel)]="newPerson.lastName" /><br />
-  <button (click)="addPerson()">Add</button>
+  <app-person-form (personSave)="addPerson($event)"></app-person-form>
 </div>
