Stuff from David

--- a/04-components/compdemo/src/app/person-detail/person-detail.component.html
+++ b/04-components/compdemo/src/app/person-detail/person-detail.component.html
@@ -4,5 +4,5 @@
 	<button (click)="delete()">Delete</button>
 </div>
 <div *ngIf="showEdit">
-	<app-person-form [startingValues]="fullName" (personSave)="save($event)" (formCancel)="cancel()"></app-person-form>
+	<app-person-form [showCancel]="true" [startingValues]="fullName" (personSave)="save($event)" (formCancel)="cancel()"></app-person-form>
 </div>
