--- a/04-components/compdemo/src/app/person-form/person-form.component.html
+++ b/04-components/compdemo/src/app/person-form/person-form.component.html
@@ -12,6 +12,6 @@
   </p>
   <p>
     <button type="submit">Save</button>
-    <button type="button" (click)="cancel()">Cancel</button>
+    <button type="button" (click)="cancel()" *ngIf="showCancel">Cancel</button>
   </p>
 </form>
