--- a/06-services-apis/quotes-api/src/app/components/quotes-items/quotes-items.component.css
+++ b/06-services-apis/quotes-api/src/app/components/quotes-items/quotes-items.component.css
@@ -1,6 +1,9 @@
 div {
-    border: 1px;
-    border-color: red;
     background-color: grey;
     width: 400px;
+}
+
+img {
+    width: 90%;
+    margin-left: 5%;
 }
