Stuff from David

--- a/07-routing/pokemon/src/app/app.component.html
+++ b/07-routing/pokemon/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h1>Pokemon App</h1>
 <nav>
   <ul>
-    <li><a routerLink="">List</a></li>
+    <li><a routerLink="">All Pokemon</a></li>
     <li><a routerLink="deck">My Deck</a></li>
   </ul>
 </nav>
