--- a/07-routing/pokemon/src/app/components/deck/deck.component.html
+++ b/07-routing/pokemon/src/app/components/deck/deck.component.html
@@ -1,8 +1,9 @@
 <h2>My Deck</h2>
 <ul>
   <li *ngFor="let pokemon of deck">
-    <img [src]="pokemon.sprites.front_default" alt="">
-    {{ pokemon.name }}
+    <a [routerLink]="['/details', pokemon.id]">
+      <img [src]="pokemon.sprites.front_default" alt="">
+      {{ pokemon.name }}</a>
     <button (click)="removeFromDeck(pokemon)">Remove</button>
   </li>
 </ul>
