--- a/07-routing/pokemon/src/app/app.component.html
+++ b/07-routing/pokemon/src/app/app.component.html
@@ -2,8 +2,8 @@
 <h1>Pokemon App</h1>
 <nav>
   <ul>
-    <li><a routerLink="">All Pokemon</a></li>
-    <li><a routerLink="deck">My Deck</a></li>
+    <li><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">All Pokemon</a></li>
+    <li><a routerLink="deck" routerLinkActive="active" ariaCurrentWhenActive="page">My Deck</a></li>
   </ul>
 </nav>
 </header>
