Stuff from David

--- a/07-routing/pokemon/src/app/app.component.html
+++ b/07-routing/pokemon/src/app/app.component.html
@@ -2,6 +2,7 @@
 <h1>Pokemon App</h1>
 <nav>
   <ul>
+    <!-- the "active" class is added when the current URL matches a link -->
     <li><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">All Pokemon</a></li>
     <li><a routerLink="deck" routerLinkActive="active" ariaCurrentWhenActive="page">My Deck</a></li>
   </ul>
