--- a/07-routing/pokemon/src/app/components/pokemon-list/pokemon-list.component.html
+++ b/07-routing/pokemon/src/app/components/pokemon-list/pokemon-list.component.html
@@ -1,6 +1,6 @@
 <h2>All Pokemon</h2>
 <ol>
   <li *ngFor="let pokemon of results">
-    <a [routerLink]="['details', pokemon.id]">{{ pokemon.name }}</a>
+    <a [routerLink]="['/details', pokemon.id]">{{ pokemon.name }}</a>
   </li>
 </ol>
