--- a/07-routing/pokemon/src/app/app.component.html
+++ b/07-routing/pokemon/src/app/app.component.html
@@ -1,13 +1,6 @@
-<header>
-<h1>Pokemon App</h1>
-<nav>
-  <ul>
-    <!-- the "active" class is added when the current URL matches a link -->
-    <li><a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" ariaCurrentWhenActive="page">All Pokemon</a></li>
-    <li><a routerLink="deck" routerLinkActive="active" ariaCurrentWhenActive="page">My Deck</a></li>
-  </ul>
-</nav>
-</header>
+<div class="container">
+  <app-header></app-header>
 
-<!-- The matching components based on the route are inserted here. -->
-<router-outlet></router-outlet>
+  <!-- The matching components based on the route are inserted here. -->
+  <router-outlet></router-outlet>
+</div>
