--- a/07-routing/pokemon/src/app/components/pokemon-details/pokemon-details.component.html
+++ b/07-routing/pokemon/src/app/components/pokemon-details/pokemon-details.component.html
@@ -1,14 +1,14 @@
 <div *ngIf="pokemon">
   <h2>{{ pokemon.name }}</h2>
   <p>
-    <button (click)="addToDeck()">Add to Deck</button>
+    <button class="btn btn-primary" (click)="addToDeck()">Add to Deck</button>
   </p>
-  <img src="{{pokemon.sprites.other.dream_world.front_default}}" alt="">
+  <img src="{{pokemon.sprites.dreamworld}}" alt="">
   <p>
-    Species: {{pokemon.species.name}}
+    Species: {{pokemon.species}}
   </p>
   <p>
-    Types: <span *ngFor="let type of pokemon.types; last as last">{{type.type.name}}{{!last ? ', ' : ''}}</span>
+    Types: <span *ngFor="let type of pokemon.types; last as last">{{type}}{{!last ? ', ' : ''}}</span>
   </p>
 </div>
 <div *ngIf="!pokemon">Loading...</div>
