--- a/07-routing/pokemon/src/app/components/edit-profile/edit-profile.component.html
+++ b/07-routing/pokemon/src/app/components/edit-profile/edit-profile.component.html
@@ -11,19 +11,23 @@
   <div class="mb-3">
     <!-- TODO: add validation -->
     <label for="email" class="form-label">Email</label>
-    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="values.email">
-    <!-- Email is not valid. -->
+    <input type="email" class="form-control" id="email" name="email" [(ngModel)]="values.email" email #email="ngModel">
+    <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger mt-2" >
+      <div *ngIf="email.errors?.['email']">Email is not valid.</div>
+    </div>
   </div>
   <div class="mb-3">
     <!-- TODO: add 2-way binding and validation -->
     <label for="birthYear" class="form-label">Birth Year</label>
-    <input type="number" class="form-control" id="birthYear">
-    <!-- Birth year is required. -->
-    <!-- Birth year must not be before 1900. -->
-    <!-- Birth year must not be in the future. -->
+    <input type="number" class="form-control" id="birthYear" name="birthYear" [(ngModel)]="values.birthYear" #birthYear="ngModel" required min="1900" max="2022">
+    <div *ngIf="birthYear.invalid && (birthYear.dirty || birthYear.touched)" class="alert alert-danger mt-2" >
+      <div *ngIf="birthYear.errors?.['required']">Birth year is required.</div>
+      <div *ngIf="birthYear.errors?.['min']">Birth year must not be before 1900.</div>
+      <div *ngIf="birthYear.errors?.['max']">Birth year must not be in the future.</div>
+    </div>
   </div>
   <div class="mb-3">
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary" [disabled]="form.invalid">Save</button>
     <div *ngIf="showSavedMessage" class="alert alert-success mt-2">Profile Saved</div>
   </div>
 </form>
